--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 pydantic==2.5.0
-starlette==0.27.0
 
 # HTTP clients
 httpx==0.24.1
@@ -12,22 +11,17 @@ requests==2.31.0
 aiohttp==3.9.1
 websockets==12.0
 
-# YouTube/Video
+# YouTube - using git version as you specified
 youtube-transcript-api==0.6.2
 git+https://github.com/yt-dlp/yt-dlp.git
 
-# AI/OpenAI
+# AI
 openai==1.12.0
 
-# Text processing
+# Text processing (pure Python, no Rust)
 nltk==3.8.1
-textblob==0.18.0
 
-# Data
+# Data processing
 pandas==2.2.3
 numpy==1.26.4
-sqlalchemy==2.0.23
 dateparser==1.2.0
-
-# Live chat (optional - may fail but won't break build)
-chat-downloader==0.2.8
