--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,15 @@ git+https://github.com/yt-dlp/yt-dlp.git
 # AI
 openai==1.12.0
 
-# Text processing (pure Python, no Rust)
+# Text processing
 nltk==3.8.1
+textblob==0.18.0
 
 # Data processing
 pandas==2.2.3
 numpy==1.26.4
+sqlalchemy==2.0.23
 dateparser==1.2.0
+
+# Live chat
+chat-downloader==0.2.8
