--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ requests==2.31.0
 aiohttp==3.9.1
 websockets==12.0
 
-# YouTube - using git version as you specified
-youtube-transcript-api==0.6.2
+# YouTube - with proxy support
+youtube-transcript-api>=0.6.2
 git+https://github.com/yt-dlp/yt-dlp.git
 
 # AI
@@ -25,8 +25,4 @@ textblob==0.18.0
 # Data processing
 pandas==2.2.3
 numpy==1.26.4
-sqlalchemy==2.0.23
 dateparser==1.2.0
-
-# Live chat
-chat-downloader==0.2.8
