--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ requests==2.31.0
 aiohttp==3.9.1
 websockets==12.0
 
-# YouTube - with proxy support
+# YouTube - latest version with proxy support
 youtube-transcript-api>=0.6.2
 git+https://github.com/yt-dlp/yt-dlp.git
 
