--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ requests==2.31.0
 aiohttp==3.9.1
 websockets==12.0
 
-# YouTube - latest version with proxy support
-youtube-transcript-api>=0.6.2
+# YouTube - MUST use v1.0.0+ for Webshare proxy support
+youtube-transcript-api>=1.0.0
 git+https://github.com/yt-dlp/yt-dlp.git
 
 # AI
