--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,8 @@ services:
       npm run build
     startCommand: python app.py
     envVars:
+      - key: CLOUD_MODE
+        value: "true"
       - key: OPENAI_API_KEY
         sync: false  # Set this in Render dashboard
       - key: YOUTUBE_API_KEY
